force-app/main/default/objects/Treatment_History__c/Treatment_History__c.object-meta.xml
<CustomObject>
    <label>Treatment History</label>
    <nameField>
        <displayFormat>TH-{0000}</displayFormat>
        <label>Treatment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>