force-app/main/default/objects/Treatment_History__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Specifies the date on which a particular treatment was administered or initiated</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>