force-app/main/default/objects/Treatment_History__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <description>To records the name or identifier of the healthcare facility where the treatment was administered, aiding in tracking the location of the patient&apos;s care.</description>
    <label>Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>