force-app/main/default/objects/Treatment_History__c/fields/Length_Of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Length_Of_Stay__c</fullName>
    <description>Captures the duration of time, in days or other relevant units, that the patient stayed at the treatment facility.</description>
    <label>Length Of Stay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>