force-app/main/default/objects/Treatment_History__c/fields/Level_of_Care__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Care__c</fullName>
    <description>Indicates the level of care provided during the treatment, selected from predefined options.</description>
    <label>Level of Care</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Detox</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>IOP</fullName>
            </value>
            <value>
                <fullName>Day-Night/PHP</fullName>
            </value>
            <value>
                <fullName>OP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>