force-app/main/default/objects/Treatment_History__c/fields/Outcome_Relapsed_when__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Relapsed_when__c</fullName>
    <description>Used to enter information about the patient&apos;s response to the treatment, including improvements, challenges, or any other relevant outcomes.</description>
    <label>Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>