force-app/main/default/objects/Treatment_History__c/fields/Pre_assessment__c.field-meta.xml
<CustomField>
    <fullName>Pre_assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to the Pre-assessment object, allowing the association of specific pre-assessment records with the Treatment History entry.</description>
    <label>Pre-assessment</label>
    <referenceTo>Pre_assessment__c</referenceTo>
    <relationshipLabel>Treatment History</relationshipLabel>
    <relationshipName>Treatment_History</relationshipName>
    <type>Lookup</type>
</CustomField>